fix: fixed navlinks height on ios

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -146,6 +146,7 @@
                 right: -300px;
 
                 width: 300px;
+                height: 100vh;
 
                 align-items: flex-start;
 
